# modbus_cheri_macaroons_demo

./: CMakeLists.txt  README.md  package.xml
include/: cheri_helper.h  cheri_macaroons_modbus_shim.hpp  cheri_macaroons_shim.hpp  cheri_modbus_shim.h  cheri_shim.hpp  macaroons_modbus_shim.hpp  macaroons_shim.hpp  shim_types.hpp
src/: cheri_macaroons_client.cpp  cheri_macaroons_server.cpp  cheri_macaroons_shim.cpp  cheri_modbus_shim.c  cheri_shim.cpp  macaroons-test-client.cpp  macaroons-test-server.cpp  macaroons_modbus_shim.cpp  macaroons_shim.cpp  modbus-unit-test-server.cpp  unit-test-client.c  unit-test-client.cpp  unit-test-server.c  unit-test-server.cpp
