<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>modbus_macaroons_demo</name>
  <version>0.7.4</version>
  <description>Minimalist demo of modbus with macaroons</description>
  <maintainer email="md403@cam.ac.uk">Michael Dodson</maintainer>
  <license>Apache License 2.0</license>
  <author>Michael Dodson</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>libmodbus</build_depend>
  <build_depend>libmacaroons</build_depend>

  <exec_depend>libmodbus</exec_depend>
  <exec_depend>libmacaroons</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
